--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
-#startBtn {
+p {
+    font-family: 'Montserrat', sans-serif;
+}
+
+.startBtn {
     padding: 20px;
     margin: 20px auto;
     position: relative;
@@ -14,21 +18,32 @@
     text-align: center;
 }
 
-#startBtn:hover {
-	cursor: pointer;
-	color: white;
+.startBtn:hover {
+    cursor: pointer;
+    color: white;
     background: rgb(115, 39, 196);
   }
 
- #startBtn p {
- 	font-weight: 500;
-    font-family: 'Montserrat', sans-serif;
+ .startBtn p {
+    font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 2px;
  }
 
+ .disabled {
+    border: 2px solid grey;
+    color: grey;
+    background: none;
+ }
+
+ .disabled:hover {
+    border: 2px solid grey;
+    color: grey;
+    background: none;
+ }
+
 .canvas-wrapper {
-	margin: auto;
-	width: 1280px;
-	position: relative;
+    margin: auto;
+    width: 1280px;
+    position: relative;
 }
