TIP after animation complete added

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@ p {
     font-family: 'Montserrat', sans-serif;
 }
 
+#tip {
+    height: 30px;
+    color: rgb(255, 123, 0);
+    text-align: center;
+}
+
 .startBtn {
     padding: 20px;
     margin: 20px auto;
